[gd_scene load_steps=5 format=3 uid="uid://cfagoymfg6o1u"]

[ext_resource type="Script" path="res://scenes/ui/screen_text_between_levels_ui.gd" id="1_ljvhr"]

[sub_resource type="Animation" id="Animation_04mfc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/MarginContainer/VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_01q1c"]
resource_name = "show_text"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/MarginContainer/VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vayrq"]
_data = {
"RESET": SubResource("Animation_04mfc"),
"show_text": SubResource("Animation_01q1c")
}

[node name="ScreenTextBetweenLevelsUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ljvhr")

[node name="ShowBottomTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 1280.0
offset_bottom = 800.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="BegginingLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 63
text = "Pildas was a humble and meek soldier. He was caught by the scientists to do an experiment to become a super soldier. 
What could go wrong?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DoubleJumpLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 63
text = "Progress:
The last experiments were a success. Pildas can now jump even while in the air. No side effects found so far."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DashLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 63
text = "Progress:
The last experiments were a success. Pildas can now run very fast for a fraction of the time."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HealthBarLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 63
text = "Progress:
I don't know what's wrong with me.
I decided to hit him and now he is angry.
I am scared.
Send help."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AberrationLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 63
text = "To all scientists in the Lab:
What we feared happened.
Pildas has become an Aberration and we need to escape."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FinishLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 63
text = "Pildas successfully escaped from the laboratory.
What should the future bring for him?
Will he have a normal life?
We'll never know, the Jam time wasn't enough for me."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtonsOrKeyMarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -176.5
offset_top = -49.0
offset_right = 176.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonsOrKeyMarginContainer"]
layout_mode = 2

[node name="PressAnyKeyLabel" type="Label" parent="ButtonsOrKeyMarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 35
text = "Press [space] to continue"
horizontal_alignment = 1

[node name="ButtonsHBoxContainer" type="HBoxContainer" parent="ButtonsOrKeyMarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="RestartButton" type="Button" parent="ButtonsOrKeyMarginContainer/VBoxContainer/ButtonsHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Restart game"

[node name="MarginContainer" type="MarginContainer" parent="ButtonsOrKeyMarginContainer/VBoxContainer/ButtonsHBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 88

[node name="QuitButton" type="Button" parent="ButtonsOrKeyMarginContainer/VBoxContainer/ButtonsHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vayrq")
}
autoplay = "show_text"
